--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,41 +1,19 @@
 Package: epicPrism
 Title: R Package for Evaluation Platform in COPD with Prism
-Version: 0.21.1
+Version: 1.0.0
 Authors@R: c(
     person("Mohsen", "Sadatsafavi", email = "mohsen.sadatsafavi@ubc.ca", role = c("aut", "cph")),
     person("Amin", "Adibi", email = "adibi@alumni.ubc.ca", role = c("aut", "cre")))
-Description: R Package for Evaluation Platform in COPD (EPIC). EPIC is a Discrete Event Simulation (DES) model that simulates health outcomes of COPD patients based on demographics and individual-level risk factors. DISCLAIMER: The package is currently under development and should not be used for research and/or clinical applications.
+Description: R Package for Evaluation Platform in COPD (EPIC) with PRISM
 Depends:
     R (>= 3.5.0)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports:
-    Rcpp (>= 1.0.0),
-    RcppArmadillo(>= 0.9.2),
-    graphics,
-    stats,
-    ggplot2(>= 3.1.0),
-    ggthemes,
-    sqldf,
-    gsubfn,
-    proto,
-    RSQLite,
-    tcltk,
-    DBI,
-    chron,
-    readr,
-    openxlsx,
-    reshape2,
-    scales,
-    tibble,
-    tidyr,
-    dplyr,
-    survival,
-    survminer,
+    epicR,
     jsonlite,
     rredis
-LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 6.1.1
 Suggests:
     testthat
