Major changes in calls (one POSt instead of one post and one GET)
API management through redis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,15 +6,7 @@ S3method(print,prism_output)
 export(as.prism_output)
 export(canbe_prism_input)
 export(canbe_prism_output)
-export(gateway_json)
-export(gateway_json0)
-export(gateway_json0_s)
-export(gateway_json1)
-export(gateway_json1_s)
-export(gateway_json2)
-export(gateway_json2_s)
-export(gateway_json3)
-export(gateway_json3_s)
+export(gateway)
 export(get_output_ex)
 export(model_run.long)
 export(prism_check_run_progress)
