--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(as.prism_output)
 export(canbe_prism_input)
 export(canbe_prism_output)
 export(gateway)
+export(gateway_async)
 export(get_output_ex)
 export(prism_get_output_structure)
 export(prism_input)
@@ -16,3 +17,4 @@ export(to_prism_input)
 export(to_prism_output)
 import(epicR)
 import(jsonlite)
+import(rredis)
