name convention updated

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(as.prism_output)
 export(canbe_prism_input)
 export(canbe_prism_output)
 export(gateway)
-export(gateway_async)
+export(gatewayasync)
 export(get_output_ex)
 export(prism_get_output_structure)
 export(prism_input)
